--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <srcipt src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch"></srcipt>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Users </h1>
+    <table>
+      <thead></thead>
+        <th>&nbsp;</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </thead>
+      <tbody id="users">
+      
+      </tbody>
+    </table>
+   
     <script src="bundle.js"></script>
   </body>
 </html>
