HTTP calls appproaches complete

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <srcipt src="https://cdn.polyfill.io/v2/polyfill.js?features=fetch"></srcipt>
   </head>
   <body>
-    <h1>Users </h1>
+    <h1>User</h1>
     <table>
       <thead></thead>
         <th>&nbsp;</th>
@@ -14,10 +14,10 @@
         <th>Email</th>
       </thead>
       <tbody id="users">
-      
+
       </tbody>
     </table>
-   
+
     <script src="bundle.js"></script>
   </body>
 </html>
